--- a/caremed/index.html
+++ b/caremed/index.html
@@ -29,7 +29,7 @@
 					<div class="col">
 						<div class="top_bar_content d-flex flex-row align-items-center justify-content-start">
 							
-							<div class="top_bar_item"><a href="#">Request an Appointment</a></div>
+							<div class="top_bar_item"><a href="Login.html">Request an Appointment</a></div>
 							<div class="emergencies  d-flex flex-row align-items-center justify-content-start ml-auto">For Emergencies: +563 47558 623</div>
 						</div>
 
@@ -50,7 +50,7 @@
 									<li><a href="about.html">About us</a></li>
 									<li><a href="#">Doctors</a></li>
 									<li><a href="services.html">Services</a></li>
-									<li><a href="#">Patient</a></li>
+									<li><a href="Patient.html">Patient</a></li>
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</nav>
