--- a/caremed/Patient.html
+++ b/caremed/Patient.html
@@ -147,7 +147,7 @@
 				<div class="col-lg-4 box_col">
 						<div class="box box_appointments">
 							<div class="box_icon d-flex flex-column align-items-start justify-content-center"><div style="width: 29px; height:29px;"><img src="images/phone-call.svg" alt=""></div></div>
-							<div class="box_title"><a href="Login.html" style="color:#F0E68C">Book Appointments</a></div>
+							<div class="box_title"><a href="PHP/Login.php" style="color:#F0E68C">Book Appointments</a></div>
 							<div class="box_text">Dear patients, here you can book appointments to our hospital, but first you have to create an account and then use it with your username
 								and password!
 							</div>
