--- a/caremed/index.html
+++ b/caremed/index.html
@@ -131,7 +131,7 @@
 									<div class="home_content_inner">
 										<div class="home_title"><h1>Medicine made with care</h1></div>
 										<div class="home_text">
-											<p>Our hospital offers you a many opportunities......</p>
+											<p>The CareMed Hospital (CMH) is open to all patients every day and provides fundamental medical care and cutting-edge medicine in a central location in Zurich. We use our superior academic knowledge to treat a wide range of health issues, taking a personal touch and utilizing highly specialized and up-to-date research.</p>
 										</div>
 										<div class="button home_button">
 											<a href="#">read more</a>
