--- a/caremed/index.html
+++ b/caremed/index.html
@@ -29,7 +29,7 @@
 					<div class="col">
 						<div class="top_bar_content d-flex flex-row align-items-center justify-content-start">
 							
-							<div class="top_bar_item"><a href="Login.html">Request an Appointment</a></div>
+							<div class="top_bar_item"><a href="PHP/login.php">Request an Appointment</a></div>
 							<div class="emergencies  d-flex flex-row align-items-center justify-content-start ml-auto">For Emergencies: +563 47558 623</div>
 						</div>
 
@@ -106,7 +106,7 @@
 				</ul>
 			</div>
 			<div class="menu_extra">
-				<div class="menu_appointment"><a href="#">Request an Appointment</a></div>
+				<div class="menu_appointment"><a href="#PHP/login.php">Request an Appointment</a></div>
 				<div class="menu_emergencies">For Emergencies: +563 47558 623</div>
 			</div>
 
