--- a/caremed/index.html
+++ b/caremed/index.html
@@ -317,11 +317,11 @@
 				<div class="col-lg-3 col-md-6 dept_col">
 					<div class="dept">
 						<div class="dept_text">
-							<p>A paragraph............................
-								............................
+							<p>Most Common Hospital Departments
+Accident and emergency (A&E): Also called Casualty Department, where you're likely to be taken if you have arrived in an ambulance or emergency situation.
+Admissions: At the Admitting Department, the patient will be required to provide personal information and sign consent forms before being taken to the hospital unit or ward.
 							</p>
 						</div>
-						<div class="button dept_button"><a href="#">read more</a></div>
 					</div>
 				</div>
 			</div>
