--- a/caremed/index.html
+++ b/caremed/index.html
@@ -346,7 +346,7 @@ Admissions: At the Admitting Department, the patient will be required to provide
 							<div class="service_icon"><img class="svg" src="images/service_1.svg" alt=""></div>
 							<div class="service_title trans_200">Free Checkups</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p>Our team of experts focuses on the diagnosis, assessment and treatment of various types of cancer, as well as your health needs beyond cancer.</p>
 							</div>
 						</div>
 					</a>
@@ -359,7 +359,7 @@ Admissions: At the Admitting Department, the patient will be required to provide
 							<div class="service_icon"><img class="svg" src="images/service_2.svg" alt=""></div>
 							<div class="service_title trans_200">Screening Exams</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p>We have the latest technology to identify all of your problems.You can trust us.</p>
 							</div>
 						</div>
 					</a>
@@ -372,7 +372,7 @@ Admissions: At the Admitting Department, the patient will be required to provide
 							<div class="service_icon"><img class="svg" src="images/service_3.svg" alt=""></div>
 							<div class="service_title trans_200">RMI Services</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p>General and advanced techniques to take images of the body, which help your physician diagnose and provide the care you need.</p>
 							</div>
 						</div>
 					</a>
@@ -385,7 +385,7 @@ Admissions: At the Admitting Department, the patient will be required to provide
 							<div class="service_icon"><img class="svg" src="images/service_4.svg" alt=""></div>
 							<div class="service_title trans_200">Dentistry</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p>Comprehensive care and treatment for all types of tooth conditions to restore and maintain the health of your teeth</p>
 							</div>
 						</div>
 					</a>
@@ -398,7 +398,7 @@ Admissions: At the Admitting Department, the patient will be required to provide
 							<div class="service_icon"><img class="svg" src="images/service_5.svg" alt=""></div>
 							<div class="service_title trans_200">Neonatology</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p>Care for individuals with diseases that affect the brain and nervous system.</p>
 							</div>
 						</div>
 					</a>
@@ -411,7 +411,7 @@ Admissions: At the Admitting Department, the patient will be required to provide
 							<div class="service_icon"><img class="svg" src="images/service_6.svg" alt=""></div>
 							<div class="service_title trans_200">Biochemistry</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p>Care for people with alcohol and other drug addictions. All treatment plans are individualized.</p>
 							</div>
 						</div>
 					</a>
