Revert "Update about.html"
This reverts commit 1c061ddbb7e541534e2114a1efd6c1045287691d.

--- a/caremed/about.html
+++ b/caremed/about.html
@@ -281,7 +281,7 @@
 				<!-- Team Member -->
 				<div class="col-lg-3 team_col">
 					<div class="team_member">
-						<div class="team_member_image d-flex flex-column align-items-center justify-content-end"><img src="images/bardhi.png" alt=""></div>
+						<div class="team_member_image d-flex flex-column align-items-center justify-content-end"><img src="images/team_2.png" alt=""></div>
 						<div class="team_member_info">
 							<div class="team_member_name"><a href="#">Dr. Josh Henderson</a></div>
 							<div class="team_member_title">Plastic Surgeon</div>
