--- a/caremed/about.html
+++ b/caremed/about.html
@@ -147,8 +147,20 @@
 				<div class="col-lg-8">
 					<div class="section_title"><h2>A great medical team to help your needs</h2></div>
 					<div class="about_text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dapibus massa. Pellen tesque in luctus ex. Praesent luctus erat sit amet tortor aliquam bibendum. Nulla ut molestie augue, scelerisque consectetur quam. Dolor sit amet, consectetur adipiscing elit. Cura bitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dapibus massa. Pellentesque in luctus ex.</p>
-						<p>Praesent luctus erat sit amet tortor aliquam bibendum. Nulla ut molestie augue, scelerisque consectetur quam. Dolor sit amet, consectetur adipiscing elit. Cura bitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dapibus massa. Pellentesque in luctus ex.</p>
+						<p>The primary-care physician suggested a different kind of angiogram, one that did not require a catheter but
+							 instead used multiple x-rays to image arteries. That test revealed an artery that was partially blocked by plaque, 
+							 and though the man’s heart was pumping blood normally, the test was incapable of determining whether the blockage was
+							  dangerous. Still, his primary-care doctor, like the cardiologist at the emergency room, suggested that the executive have an 
+							  angiogram with a catheter, likely followed by a procedure to implant a stent. The man set up an appointment with the cardiologist
+							  he was referred to for the catheterization, but when he tried to contact that doctor directly ahead of time, he was told the 
+							  doctor wouldn’t be available prior to the procedure. And so the executive sought yet another opinion. That’s when he found Dr.
+							   David L. Brown, a professor in the cardiovascular division of the Washington University School of Medicine in St. Louis. The 
+							   executive told Brown that he’d felt pressured by the previous doctors and wanted more information. He was willing to try all 
+							   manner of noninvasive treatments—from 
+							a strict diet to retiring from his stressful job—before having a stent implanted.</p>
+						<p>Praesent luctus erat sit amet tortor aliquam bibendum. Nulla ut molestie augue, scelerisque consectetur quam. Dolor sit amet,
+							 consectetur adipiscing elit. Cura bitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper 
+							 sollicitudin. Aliquam nec dapibus massa. Pellentesque in luctus ex.</p>
 					</div>
 					<div class="row loaders_container">
 						<div class="col-md-3 loader_col">
@@ -232,7 +244,7 @@
 				<div class="col-lg-6 test_col">
 					<div class="testimonial">
 						<div class="test_icon d-flex flex-column align-items-center justify-content-center"><img src="images/quote.png" alt=""></div>
-						<div class="test_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dap ibus massa. Pellen tesque in luctus ex. Praesent luctus erat sit amet torto.</div>
+						<div class="test_text">"Efficiency from all staff from the car park attendant right through to the nursing staff and doctors. A pleasant caring manner makes such a difference when you are receiving scary treatment. I cannot fault the Cromwell experience. Thank you."</div>
 						<div class="test_author d-flex flex-row align-items-center justify-content-start">
 							<div class="test_author_image"><div><img src="images/test_1.jpg" alt=""></div></div>
 							<div class="test_author_name"><a href="#">Claire Smith</a>, <span>Patient</span></div>
@@ -244,7 +256,7 @@
 				<div class="col-lg-6 test_col">
 					<div class="testimonial">
 						<div class="test_icon d-flex flex-column align-items-center justify-content-center"><img src="images/quote.png" alt=""></div>
-						<div class="test_text">Slor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dap ibus massa. Pellen tesque in luctus ex. Praesent luctus erat sit amet tortor aliquam bibendum.</div>
+						<div class="test_text">Very friendly staff from the nurses to doctors, to porters to security staff. All of whom make you at ease when you feel most vulnerable, as you are about to go for an operation. Thanks."</div>
 						<div class="test_author d-flex flex-row align-items-center justify-content-start">
 							<div class="test_author_image"><div><img src="images/test_2.jpg" alt=""></div></div>
 							<div class="test_author_name"><a href="#">Mick Williams</a>, <span>Patient</span></div>
@@ -281,7 +293,7 @@
 				<!-- Team Member -->
 				<div class="col-lg-3 team_col">
 					<div class="team_member">
-						<div class="team_member_image d-flex flex-column align-items-center justify-content-end"><img src="images/bardhi.png" alt=""></div>
+						<div class="team_member_image d-flex flex-column align-items-center justify-content-end"><img src="images/team_2.png" alt=""></div>
 						<div class="team_member_info">
 							<div class="team_member_name"><a href="#">Dr. Josh Henderson</a></div>
 							<div class="team_member_title">Plastic Surgeon</div>
