--- a/caremed/contact.html
+++ b/caremed/contact.html
@@ -151,7 +151,7 @@
 					</div>
 					<ul class="contact_about_list">
 						<li><div class="contact_about_icon"><img src="images/phone-call.svg" alt=""></div><span>+45 677 8993000 223</span></li>
-						<li><div class="contact_about_icon"><img src="images/envelope.svg" alt=""></div><span>office@template.com</span></li>
+						<li><div class="contact_about_icon"><img src="images/envelope.svg" alt=""></div><span>caremed@gmail.com</span></li>
 						<li><div class="contact_about_icon"><img src="images/placeholder.svg" alt=""></div><span>Main Str. no 45-46, b3, 56832, Los Angeles, CA</span></li>
 					</ul>
 				</div>
