--- a/caremed/contact.html
+++ b/caremed/contact.html
@@ -147,7 +147,12 @@
 				<div class="col-lg-6">
 					<div class="section_title"><h2>Get in touch</h2></div>
 					<div class="contact_text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dapibus massa.</p>
+						<p>Contact Us Online
+Do you have a question about our services or another topic?
+
+Use Patient Online Services to securely contact your medical provider.
+Call or Visit Us
+We have more than 60 locations across Iowa, Minnesota and Wisconsin.</p>
 					</div>
 					<ul class="contact_about_list">
 						<li><div class="contact_about_icon"><img src="images/phone-call.svg" alt=""></div><span>+45 677 8993000 223</span></li>
