--- a/caremed/index.html
+++ b/caremed/index.html
@@ -344,7 +344,7 @@ Admissions: At the Admitting Department, the patient will be required to provide
 					<a href="services.html">
 						<div class="service text-center trans_200">
 							<div class="service_icon"><img class="svg" src="images/service_1.svg" alt=""></div>
-							<div class="service_title trans_200">Free Checkups</div>
+							<div class="service_title trans_200">Cancer</div>
 							<div class="service_text">
 								<p>Our team of experts focuses on the diagnosis, assessment and treatment of various types of cancer, as well as your health needs beyond cancer.</p>
 							</div>
