--- a/caremed/Patient.html
+++ b/caremed/Patient.html
@@ -24,18 +24,111 @@
 
 	<div class="super_container">
 
-	<!-- Header -->
+		<!-- Header -->
 
-	<?php
-		include('header.php');
-	?>
-	
-	<!-- Home -->
+		<header class="header trans_200">
+
+			<!-- Top Bar -->
+			<div class="top_bar">
+				<div class="container">
+					<div class="row">
+						<div class="col">
+							<div class="top_bar_content d-flex flex-row align-items-center justify-content-start">
+
+								<div class="top_bar_item"><a href="PHP\login.php">Request an Appointment</a></div>
+								<div
+									class="emergencies  d-flex flex-row align-items-center justify-content-start ml-auto">
+									For Emergencies: +563 47558 623</div>
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- Header Content -->
+			<div class="header_container">
+				<div class="container">
+					<div class="row">
+						<div class="col">
+							<div class="header_content d-flex flex-row align-items-center justify-content-start">
+								<nav class="main_nav ml-auto">
+									<ul>
+										<li><a href="index.html">Home</a></li>
+										<li><a href="about.html">About us</a></li>
+										<li><a href="#">Doctors</a></li>
+										<li><a href="services.html">Services</a></li>
+										<li><a href="#">Patient</a></li>
+										<li><a href="contact.html">Contact</a></li>
+									</ul>
+								</nav>
+								<div class="hamburger ml-auto"><i class="fa fa-bars" aria-hidden="true"></i></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- Logo -->
+			<div class="logo_container_outer">
+				<div class="container">
+					<div class="row">
+						<div class="col">
+							<div class="logo_container">
+								<a href="#">
+									<div
+										class="logo_content d-flex flex-column align-items-start justify-content-center">
+										<div class="logo_line"></div>
+										<div class="logo d-flex flex-row align-items-center justify-content-center">
+											<div class="logo_text">Care<span>Med</span></div>
+											<div class="logo_box">+</div>
+										</div>
+										<div class="logo_sub">Health Care Center</div>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</header>
+
+		<!-- Menu -->
+
+		<div class="menu_container menu_mm">
+
+			<!-- Menu Close Button -->
+			<div class="menu_close_container">
+				<div class="menu_close"></div>
+			</div>
+
+			<!-- Menu Items -->
+			<div class="menu_inner menu_mm">
+				<div class="menu menu_mm">
+					<ul class="menu_list menu_mm">
+						<li class="menu_item menu_mm"><a href="index.html">Home</a></li>
+						<li class="menu_item menu_mm"><a href="about.html">About us</a></li>
+						<li class="menu_item menu_mm"><a href="services.html">Services</a></li>
+						<li class="menu_item menu_mm"><a href="news.html">News</a></li>
+						<li class="menu_item menu_mm"><a href="contact.html">Contact</a></li>
+					</ul>
+				</div>
+				<div class="menu_extra">
+					<div class="menu_appointment"><a href="PHP\login.php">Request an Appointment</a></div>
+					<div class="menu_emergencies">For Emergencies: +563 47558 623</div>
+				</div>
+
+			</div>
+
+		</div>
+
+		<!-- Home -->
 
 		<div class="home">
 			<div class="home_slider_container">
 				<!-- Slider Progress -->
-				<div class="home_slider_progress"></div>
+				<div class="home_slider_progress">sdfdsfsdfs</div>
 			</div>
 			
 
