--- a/caremed/Doctor/DocHTML.html
+++ b/caremed/Doctor/DocHTML.html
@@ -8,9 +8,9 @@
 
 	<div class="container">
 	<div class="row">
-	<table style="padding: 52px; border-spacing: 40px; margin-top: -8%; margin-left: 50px;">
+	<table style="padding: 52px; border-spacing: 40px; margin-top: 4%; margin-left: 50px;">
         <tr>
-            <td>
+            <td style="padding: 20px">
 	<!--team-1-->
 	<div class="col-lg-4">
 	<div class="our-team-main">
@@ -50,7 +50,7 @@
 	</div>
     </td>
     <!--team-2-->
-	<td>
+	<td  style="padding: 20px">
 	<!--team-3-->
 	<div class="col-lg-4">
 	<div class="our-team-main">
@@ -72,7 +72,7 @@
     </tr>
 	<!--team-3-->
 	<tr>
-    <td>
+    <td style="padding: 20px">
 	<!--team-4-->
 	<div class="col-lg-4">
 	<div class="our-team-main">
@@ -90,7 +90,7 @@
 	
 	</div>
     </div>
-    </td>
+    </td  style="padding: 20px">
 	<!--team-4-->
     </td>
     <td>
@@ -113,7 +113,7 @@
     </div>
     </td>
 	<!--team-5-->
-	<td>
+	<td  style="padding: 20px">
 	<!--team-6-->
 	<div class="col-lg-4">
 	<div class="our-team-main">
