--- a/caremed/Doctor/DocHTML.html
+++ b/caremed/Doctor/DocHTML.html
@@ -8,7 +8,7 @@
 
 	<div class="container">
 	<div class="row">
-	<table style="padding: 52px; border-spacing: 40px; margin-top: 4%; margin-left: 50px;">
+	<table style="padding: 52px; border-spacing: 40px; margin-top: 7%;margin-bottom: 7%; margin-left: 50px;">
         <tr>
             <td style="padding: 20px">
 	<!--team-1-->
